--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,15 @@
     android:src="@drawable/ic_baseline_add_24"
     android:backgroundTint="@android:color/background_light"/>
 
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/addFAB"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="174dp"
+        android:layout_marginBottom="206dp"
+        android:id="@+id/progressBar"/>
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -34,14 +43,17 @@
         android:id="@+id/searchImage"
         android:background="@drawable/rounded_corners"
         />
+
     <ImageView
+        android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_baseline_arrow_back_ios_24"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="375dp"
+        android:layout_marginBottom="10dp"
         android:layout_toLeftOf="@id/searchText"
-        android:layout_margin="10dp"
-        android:id="@+id/back"
-        />
+        android:src="@drawable/ic_baseline_arrow_back_ios_24" />
 
     <EditText
         android:id="@+id/searchText"
