--- a/app/src/main/res/layout/new_task.xml
+++ b/app/src/main/res/layout/new_task.xml
@@ -2,13 +2,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<EditText
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@null"
-    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-    android:hint="New Task"
-    android:id="@+id/newTaskText"/>
+
+    <ProgressBar
+        android:id="@+id/pb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/newTaskText"
+        android:layout_marginTop="53dp"
+        android:layout_marginEnd="95dp"
+        android:layout_toStartOf="@+id/newTaskButton" />
+
+    <EditText
+        android:id="@+id/newTaskText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:hint="New Task"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
