Improved the UI

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -21,26 +21,13 @@
         android:id="@+id/login"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/register_login"
+        android:layout_above="@+id/linearLayout"
 android:layout_centerHorizontal="true"
         android:layout_marginBottom="27dp"
         android:background="@drawable/rounded_corners"
         android:text="Login"
 
         android:textColor="@color/background" />
-
-    <Button
-        android:id="@+id/register_login"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_centerVertical="true"
-        android:layout_marginBottom="156dp"
-        android:background="@drawable/rounded_corners"
-        android:text="Register"
-        android:textColor="@color/background" />
-
     <EditText
         android:id="@+id/password_login"
         android:layout_width="wrap_content"
@@ -68,6 +55,36 @@ android:layout_centerHorizontal="true"
         android:hint="Username"
         android:inputType="textPersonName"
         android:textColor="@color/white" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="158dp"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:padding="10dp"
+            android:text="New User?"
+            android:textColor="@color/white"
+            android:textSize="15dp" />
+
+        <TextView
+            android:id="@+id/register_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_gravity="center"
+            android:background="?attr/selectableItemBackground"
+            android:text="Register"
+            android:textColor="@color/white"
+            android:textSize="20dp" />
+    </LinearLayout>
 
 
 </RelativeLayout>
