--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".screens.MainActivity"
     android:background="@color/background">
-
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Task List"
+    android:textColor="@color/white"
+    android:textSize="40dp"
+    android:paddingLeft="15dp"
+    android:paddingTop="3dp"
+    android:textStyle="normal"/>
 <androidx.recyclerview.widget.RecyclerView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -33,40 +41,6 @@
         android:layout_marginEnd="174dp"
         android:layout_marginBottom="206dp"
         android:id="@+id/progressBar"/>
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:src="@drawable/ic_baseline_search_24"
-        android:layout_margin="10dp"
-        android:id="@+id/searchImage"
-        android:background="@drawable/rounded_corners"
-        />
-
-    <ImageView
-        android:id="@+id/back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="375dp"
-        android:layout_marginBottom="10dp"
-        android:layout_toLeftOf="@id/searchText"
-        android:src="@drawable/ic_baseline_arrow_back_ios_24" />
-
-    <EditText
-        android:id="@+id/searchText"
-        android:layout_width="298dp"
-        android:layout_height="56dp"
-        android:layout_margin="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="64dp"
-        android:layout_marginBottom="8dp"
-        android:layout_toLeftOf="@id/searchImage"
-        android:hint="Search"
-        android:textSize="20sp" />
-
 
 
 </RelativeLayout>
