--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -7,4 +7,10 @@
         app:showAsAction="ifRoom|collapseActionView"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         />
+    <item android:id="@+id/profile_icon"
+        android:title="Search"
+        android:icon="@drawable/ic_outline_person_24_white"
+        app:showAsAction="ifRoom|collapseActionView"
+        />
+
 </menu>
