--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,20 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".screens.MainActivity"
     android:background="@color/background">
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="9dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginVertical="8dp"
+        app:cardElevation="5dp">
 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="Task List"
-    android:textColor="@color/white"
+    android:textColor="@color/background"
     android:textSize="40dp"
     android:paddingLeft="15dp"
     android:paddingTop="3dp"
     android:textStyle="normal"/>
+    </androidx.cardview.widget.CardView>
 <androidx.recyclerview.widget.RecyclerView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/recyclerView"
-    android:layout_marginTop="?attr/actionBarSize"
+    android:layout_marginTop="70dp"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     android:nestedScrollingEnabled="true"/>
 <com.google.android.material.floatingactionbutton.FloatingActionButton
