added progress bar to register method

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -84,4 +84,15 @@ android:layout_centerHorizontal="true"
         android:background="@drawable/rounded_corners"
         android:text="Register"
         android:textColor="@color/background" />
+
+    <ProgressBar
+        android:id="@+id/progressBar3"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="182dp"
+        android:layout_marginBottom="308dp"
+        android:visibility="invisible" />
 </RelativeLayout>
